--- a/07-Asciidoc/src/main/asciidoc/release_notes.adoc
+++ b/07-Asciidoc/src/main/asciidoc/release_notes.adoc
@@ -1,11 +1,11 @@
-= O3P0 - The OP's eProcurement Ontology
+= ePO - The European eProcurement Ontology
 
 == Release Notes
 
-=== Version 2.0.0
+=== Version 2.0.0 (2018)
 
 * Adds an _eProcurement Glossary_
-* Extends the methodological approach adopted in v1.0
+* Extends the methodological approach adopted in v1.00
 * Focuses on eNotification and eAccess
 * Main Deliverables: 
 ** Elicitates new Information Requirements based on the Business Domain knowledge (and taking into account the Use Cases defined in v1.0)
@@ -15,7 +15,7 @@
 ** PoC focused on Use Case 1: "Data Journalism"
 ** Enhances the on-line documentation
 
-=== Version 1.0
+=== Version 1.00 (2017)
 
 * Defines of three Use Cases:
 ** Use Case 1: "Data Journalism"
