--- a/07-Asciidoc/src/main/asciidoc/index.adoc
+++ b/07-Asciidoc/src/main/asciidoc/index.adoc
@@ -12,3 +12,7 @@ include::chapters/I_Introduction.adoc[]
 include::chapters/II_Methodological_Approach.adoc[]
 include::chapters/III_Information_Requirements.adoc[]
 include::chapters/IV_Conceptual_Data_Model.adoc[]
+include::chapters/V_Design_Implementation.adoc[]
+include::chapters/VI_PoC.adoc[]
+include::chapters/VII_Conclusions_And_Next_Steps.adoc[]
+
