--- a/07-Asciidoc/src/main/asciidoc/index.adoc
+++ b/07-Asciidoc/src/main/asciidoc/index.adoc
@@ -3,11 +3,11 @@
 :toclevels: 3
 ifndef::downloaddir[:downloaddir: download]
 
-include::_chapters/0_Abstract.adoc[]
-include::_chapters/I_Introduction.adoc[]
-include::_chapters/II_Methodological_Approach.adoc[]
-include::_chapters/III_Information_Requirements.adoc[]
-include::_chapters/IV_Conceptual_Data_Model.adoc[]
-include::_chapters/V_Design_Implementation.adoc[]
-include::_chapters/VI_PoC.adoc[]
-include::_chapters/VII_Conclusions_And_Next_Steps.adoc[]
+include::chapters/0_Abstract.adoc[]
+include::chapters/I_Introduction.adoc[]
+include::chapters/II_Methodological_Approach.adoc[]
+include::chapters/III_Information_Requirements.adoc[]
+include::chapters/IV_Conceptual_Data_Model.adoc[]
+include::chapters/V_Design_Implementation.adoc[]
+include::chapters/VI_PoC.adoc[]
+include::chapters/VII_Conclusions_And_Next_Steps.adoc[]
