--- a/07_Asciidoc/src/main/asciidoc/index.adoc
+++ b/07_Asciidoc/src/main/asciidoc/index.adoc
@@ -10,3 +10,4 @@ include::chapters/III_Conceptual_Data_Model.adoc[]
 include::chapters/IV_Design_Implementation.adoc[]
 include::chapters/V_PoC.adoc[]
 include::chapters/VI_Conclusions_And_Next_Steps.adoc[]
+include::chapters/VII_Annex_I_COM_KPIs.adoc[]
