--- a/07_Asciidoc/src/main/asciidoc/index.adoc
+++ b/07_Asciidoc/src/main/asciidoc/index.adoc
@@ -9,3 +9,4 @@ include::chapters/II_Information_Requirements.adoc[]
 include::chapters/III_Conceptual_Data_Model.adoc[]
 include::chapters/IV_Design_Implementation.adoc[]
 include::chapters/V_PoC.adoc[]
+include::chapters/VII_Annex_I_TypesOfFormsRead.adoc[]
